# mypypi

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.py  prune.py  pyproject.toml  wsgi.py
.github/: dependabot.yml
.github/workflows/: build.yml  ghbuild.yml
app/: downloader.py  main.py
app/database/: __init__.py
app/files/: base.py  local.py  s3.py
app/libraries/: hash.py  proxy.py  url.py
app/models/: url_cache.py
app/proxy/: __init__.py
app/routes/: files.py  json.py  simple.py
app/routes/npm/: __init__.py  file.py  files.py  json.py  keys.py  packages.py
app/routes/pypi/: __init__.py  files.py  json.py  simple.py
app/storage/: base.py  sql.py
