[tool.poetry]
    name        = "mypypi"
    version     = "1.0.15"
    description = "PyPi pull-through cache"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]
    readme      = "README.md"
    license     = "MIT"

[tool.poetry.dependencies]
    python          = ">=3.8,<4.0"
    Flask           = "^2.1.2"
    Flask-Caching   = "^1.11.1"    # additional layer of caching
    requests        = "^2.26.0"    # HTTP requests
    loguru          = "^0.6.0"     # logging
    beautifulsoup4  = "^4.11.1"    # HTML parsing
    dynaconf        = "^3.1.9"     # config
    s3fs            = "^2022.5.0"  # S3
    peewee          = "^3.14.10"    # SQL
    PyMySQL         = "^1.0.2"     # MySQL
    psycopg2-binary = "^2.9.3"     # PostgreSQL
    redis           = "^4.3.3"     # Redis

[tool.poetry.dev-dependencies]
    black     = "^22.3"
    isort     = "^5.10.1"
    autoflake = "^1.4"
    pyleft    = "^1.1.0"

# dogfood ourselves
[[tool.poetry.source]]
    name    = "mypypi"
    url     = "https://pypi.nthnv.me/simple"
    default = false

[build-system]
    requires      = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
