[tool.poetry]
    name        = "mypypi"
    version     = "3.1.5"
    description = "PyPi/NPM pull-through cache"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]
    readme      = "README.md"
    license     = "MIT"

[tool.poetry.dependencies]
    python         = ">=3.8,<4.0"
    Flask          = "^2.2.2"
    requests       = "^2.28.1"    # HTTP requests
    loguru         = "^0.6.0"     # logging
    dynaconf       = "^3.1.9"     # config
    s3fs           = "^2022.7.1"  # S3
    redis          = "^4.3.4"     # Redis
    packaging      = "^21.3"      # Python package parsing
    beautifulsoup4 = "^4.11.1"    # HTML parsing
    cachetools     = "^5.2.0"     # caching
    orjson         = "^3.7.11"     # Fast JSON serialization

[tool.poetry.dev-dependencies]
    black     = "^22.6"
    isort     = "^5.10.1"
    autoflake = "^1.4"
    pyleft    = "^1.1.0"

# dogfood ourselves
# [[tool.poetry.source]]
#     name    = "mypypi"
#     url     = "https://pypi.nthnv.me/simple"
#     default = true

[build-system]
    requires      = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
